fix the carousel image height on mobile and grid columns on all other pages

--- a/resources/assets/sass/pages/landing-page.scss
+++ b/resources/assets/sass/pages/landing-page.scss
@@ -2,6 +2,12 @@
     background-color: $gray-background;
 }
 
+.home-page-carousel {
+    .carousel-images {
+        height: 457px;
+    }
+}
+
 .featured-section {
     //padding: 50px 0;
 
